# flex-lang

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
compiler/: .gitignore  CMakeLists.txt
compiler/src/: main.cpp  util.cpp  util.hpp
compiler/src/grammar/: FlexLexer.g4  FlexParser.g4
lib/: antlr4.cmake  tinycc.cmake
spec/: flex.sublime-syntax  main.typ
src/: main.cpp
src/grammar/: Flex.g4
